added stories section

--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -31,7 +31,16 @@
         color: $color-grey-dark;
         
         &::after {
-            background-color: white;
+            background-color: $color-white;
+        }
+    }
+
+    &--green {
+        background-color: $color-primary;
+        color: $color-white;
+        
+        &::after {
+            background-color: $color-primary;
         }
     }
     
